# drf-auth

./: README.md  creds.txt  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
book_store/: settings.py  urls.py
books/: admin.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py
